# IPTV_Navigator_PRO_v5.4_MAX_AGGRESSION

./: .gitignore  .gitignore.bk_mojibake_20260426_094154  AGENTS.md  CLAUDE.md  Configuracion_Canal_Resolucion.txt  Ctmpbackup_out.txt  Ctmpbuttons_out.txt  Ctmpdashboard_out.txt  Ctmpdual_patch_out.txt  Ctmpfix_ambiguous_out.txt  Ctmpfix_buttons_out.txt  Ctmpgap_install_out.txt  Ctmpimport_internals.txt  Ctmpimport_out.txt  Ctmpphase2e_out.txt  Ctmpphase2f_out.txt  Ctmpport_check_out.txt  Ctmpprofile_buffer_out.txt  Ctmpresurrection_out.txt  Ctmpsc_g5_out.txt  Ctmpsc_g5_rerun.txt  Ctmpsc_native_out.txt  Ctmpsc_v21_out.txt  Ctmpsc_v2_out.txt  Ctmpscorecard_out.txt  Ctmpscorecard_run_out.txt  Ctmpscorecard_view.txt  Ctmpverify_out.txt  add_qiravion.sh  ape_api_server.py  ape_api_server_v2.1.py  audit.ps1  audit_creds.js  audit_e2e.js  audit_e2e_massive.txt  audit_full_output.txt  audit_m3u8.py  audit_output.txt  audit_output_utf8.txt  audit_output_v5.2.txt  (+70 more)
.agent/: COORDINATION.md  implementation_plan.md  task.md  walkthrough.md
.agents/: SKILLS_INSTALLATION_REPORT.md  skills_index.json
.claude/: settings.json  settings.local.json
IPTV_v5.4_MAX_AGGRESSION/: DEPLOYMENT_PACKAGE_V3.md  START_GATE_SERVER.bat  audit-modules.sh  audit.py  audit.txt  docx_content.txt  e2e_multi_server_fire_test.js  e2e_url_math_test.js  extract.ps1  find_results.txt  find_urls.js  fix-buffering.sh  fix_enc.ps1  generate_m3u8_v54_max_aggression.py  inject_dscp.py  inject_filter.py  inject_phantom.py  (+12 more)
IPTV_v5.4_MAX_AGGRESSION/backup_master_v5.4_phantom_engine/frontend/tools/stream_probe_server/: Cargo.toml  README.md  install_autostart.ps1  probe_server.py  probe_server_vps.py  run_server.bat  run_server_python.bat  start_probe_server.ps1  start_server_robust.ps1  start_watchdog.vbs  uninstall_autostart.ps1
IPTV_v5.4_MAX_AGGRESSION/backup_master_v5.4_phantom_engine/frontend/tools/stream_probe_server/src/: main.rs
IPTV_v5.4_MAX_AGGRESSION/backup_master_v5.4_phantom_engine/frontend/vps/upload-server/: Cargo.toml  upload-server.service
IPTV_v5.4_MAX_AGGRESSION/backup_master_v5.4_phantom_engine/frontend/vps/upload-server/src/: jwt.rs  state.rs
(+4255 files in other folders)
